add the auth page

--- a/src/app/layout/Header/style.css
+++ b/src/app/layout/Header/style.css
@@ -5,8 +5,7 @@
   color: #1890ff;
   text-align: center;
   font-size: 15px;
-  border-radius: 3px;
   line-height: 31px;
-  background: #e6f7ff;
+  background: #e6f7ff34;
   float: left;
 }
