feat: layout and content style

--- a/src/app/layout/Header/style.css
+++ b/src/app/layout/Header/style.css
@@ -2,7 +2,7 @@
   width: 120px;
   height: 31px;
   margin: 16px 28px 16px 0;
-  color: #1890ff;
+  color: #fff;
   text-align: center;
   font-size: 15px;
   line-height: 31px;
